syntax = "proto3";

package model;
import "google/protobuf/Empty.proto";

service ParkingService{
    rpc ParkIn(google.protobuf.Empty) returns (UserIn){}
    rpc ParkOut(InputData) returns (UserOut){}
}

message UserIn{
    string Id = 1;
    string Time =2;
}


message InputData{
    string Id = 1;
    string Platno = 2;
    string Tipe = 3;
}

message UserOut{
    string Id = 1;
    string Platno = 2;
    string Message = 4;
    string Duration = 3;
}

